--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,53 @@
+absl-py==0.7.1
+astor==0.7.1
 beautifulsoup4==4.7.1
 bs4==0.0.1
 certifi==2019.3.9
 chardet==3.0.4
 Click==7.0
+cloudpickle==0.8.0
+cycler==0.10.0
+dask==1.1.4
+decorator==4.4.0
+fer==0.0.8
+gast==0.2.2
+grpcio==1.19.0
 gTTS==2.0.3
 gTTS-token==1.1.3
+h5py==2.9.0
 idna==2.8
+Keras==2.2.4
+Keras-Applications==1.0.7
+Keras-Preprocessing==1.0.9
+kiwisolver==1.0.1
+Markdown==3.0.1
+matplotlib==3.0.3
+mock==2.0.0
+networkx==2.2
 numpy==1.16.2
-opencv-python==4.0.0.21
+opencv-contrib-python==4.0.0.21
+opencv-python==3.4.5.20
+pandas==0.24.2
+pbr==5.1.3
 Pillow==5.4.1
 pkg-resources==0.0.0
+protobuf==3.7.0
+py-agender==0.0.8
+pyparsing==2.3.1
+pytesseract==0.2.6
+python-dateutil==2.8.0
+pytz==2018.9
+PyWavelets==1.0.2
+PyYAML==5.1
 requests==2.21.0
+scikit-image==0.14.2
+scipy==1.2.1
 six==1.12.0
 soupsieve==1.8
+tensorboard==1.13.1
+tensorflow==1.13.1
+tensorflow-estimator==1.13.0
+termcolor==1.1.0
+toolz==0.9.0
 urllib3==1.24.1
+Werkzeug==0.14.1
